--- a/netflix_analysis_pandas.ipynb
+++ b/netflix_analysis_pandas.ipynb
@@ -42,7 +42,9 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "df = pd.read_csv('/content/drive/MyDrive/netflix_dataset/netflix_titles.csv/netflix_titles.csv')\n",
+df = pd.read_csv('https://raw.githubusercontent.com/<your-username>/<repo-name>/main/netflix_cleaned.csv')
+
+        "df = pd.read_csv('https://raw.githubusercontent.com/bhavya837/netflix-analysis_pandas/main/netflix_cleaned.csv')\n",
         "df.head()"
       ],
       "metadata": {
