--- a/netflix_analysis_pandas.ipynb
+++ b/netflix_analysis_pandas.ipynb
@@ -42,7 +42,7 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "df = pd.read_csv('/content/drive/MyDrive/netflix_dataset/netflix_titles.csv/netflix_titles.csv')\n",
+        "df = pd.read_csv('https://raw.githubusercontent.com/Bhavya837/netflix-pandas-analysis/main/netflix_cleaned.csv')\n",
         "df.head()"
       ],
       "metadata": {
